tested handling form data using the form data object

--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
     <ul class="people">
     </ul>
     <form action="">
+        
         <input type="text" class="person" autofocus = "focus" >
         <button type="submit" class="send">send</button>
     
+    </form>
+
+
+    <form action="" class="testa">
+        <legend>testing shit</legend>
+        <input type="text" placeholder="firsname" name="f">
+        <input type="file" multiple name="pic"  class="pic">
+        <input type="text" placeholder = "last name" name="l">
+
+        <input type="submit">
     </form>
 
     <script src="index.js" defer></script>
